parser/src/snapshots/rustpython_parser__string__tests__backspace_alias.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Str(
                                "\u{8}",
                            ),
                            kind: None,
                            range: 0..15,
                        },
                    ),
                },
                range: 0..15,
            },
        ),
    },
]
