parser/src/snapshots/rustpython_parser__string__tests__bell_alias.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            value: Constant(
                ExprConstant {
                    value: Str(
                        "\u{7}",
                    ),
                    kind: None,
                    range: 0..9,
                },
            ),
            range: 0..9,
        },
    ),
]
