parser/src/snapshots/rustpython_parser__string__tests__carriage_return_alias.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            value: Constant(
                ExprConstant {
                    value: Str(
                        "\r",
                    ),
                    kind: None,
                    range: 0..21,
                },
            ),
            range: 0..21,
        },
    ),
]
