parser/src/snapshots/rustpython_parser__string__tests__character_tabulation_with_justification_alias.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Str(
                                "\u{89}",
                            ),
                            kind: None,
                            range: 0..45,
                        },
                    ),
                },
                range: 0..45,
            },
        ),
    },
]
