parser/src/snapshots/rustpython_parser__string__tests__delete_alias.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            value: Constant(
                ExprConstant {
                    value: Str(
                        "\u{7f}",
                    ),
                    kind: None,
                    range: 0..12,
                },
            ),
            range: 0..12,
        },
    ),
]
